<resources>
    <string name="app_name">Moto360</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_sensor_data_to_file">sensorDataToFile</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="label_X">X:</string>
    <string name="label_Y">Y:</string>
    <string name="label_Z">Z:</string>
    <string name="title_activity_sensorik_test">SensorikTestActivity</string>
    <string name="title_activity_draw_sensor">DrawSensorActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
